   
   [D] Changes affect a method or property which was previously marked as 
       deprecated.

  December XX, 2004
 - Release of version 1.3alpha-4

 - Fixed Bugzilla 15198: TelnetAppender: NullPointerException if
   SocketHandler not initialized. [*]

 - Fixed Bugzilla 12112: CountingQuietWriter miscounts bytes. [*]

 - Fixed Bugzilla 18076: setting of firstTime in OnlyOnceErrorHandler. [*]

 - Implemented Bugzilla 20985: charset support for SMTPAppender [**]

 - Implemented Bugzilla 20500: separate registry clearing from doConfigure in PropertyConfigurator
   to allow to easier extension. [*]

 - Fixed Bugzilla 23912: unsafe access to BoundedFIFO in AsyncAppender. [*]

 - Fixed Bugzilla 17377: wrong trimming of pattern when left-aligned. [*]

 - Changed converter register accessors in PatternParser to take/return Map instead
   of HashMap, a cleaner abstraction allowing for different implementation types. [*]

 - Fixed Bugzilla 26658: modify build.xml chainsaw target with respect to crimson.jar [*]

 - Fixed Bugzilla 28682: NullPointerException in SocketHubAppender#cleanup. [*]

 - Fixed Bugzilla 28464: White space significant at end of line for PropertyConfigurator. [*]

 - Fixed Bugzilla 26117: Output encoding for TelnetAppender. [*]

  November 25, 2004

 - Release of version 1.3alpha-3
 
 - Classes are built with the javac debug setting on.
 - Fixed unset activeFile bug in SlidingWindowRollingPolicy.
 
  November 25, 2004

 - Release of version 1.3alpha-2
 
 - The deprecated DOMConfigrator was mistakenly left as the default
   configrator for XML files.  This has been fixed and JoranConfigrator
   now is the default configrator for XML files.
 
 November 24th, 2004

 - Release of version 1.3alpha-1

 - Log4j now uses itself for its own logging. For more details refer to
   
     http://www.qos.ch//logging/internalLogging.jsp

 - The Appender.requiresLayout() method is no longer needed.

   This method was only used by PropertConfigrurator and not