@@ -18,8 +18,12 @@
 
  - Fixed Bugzilla 18076: setting of firstTime in OnlyOnceErrorHandler. [*]
 
- - Implemented Bugzilla 20985: charset support for SMTPAppender [**]
+ - Added pattern conversion support for the Subject line for emails 
+   generated by  SMTPAppender. The set of patterns is the same as those 
+   supported by PatternLayout. [*]
 
+ - Implemented Bugzilla 20985: charset support for SMTPAppender [**]
+  
  - Implemented Bugzilla 20500: separate registry clearing from doConfigure in PropertyConfigurator
    to allow to easier extension. [*]
 
